# hulvdan.github.io

./: README.md  README_EN.md  build.py  index.md  index_template.html  pyproject.toml  style.css  tests.py
.nvim-personal/: setup.lua  shell-qt.bat  startup.lua
docs/: en.html  habits.html  index.html  jams.html  style-0a0e68ff.css  style-0d303902.css  style-101bac9c.css  style-3693791a.css  style-394cd781.css  style-438afd17.css  style-4d19761a.css  style-4fcba0bd.css  style-632516cf.css  style-86cc674f.css  style-95ac07cc.css  style-96029934.css  style-d977ed70.css  style.css
docs/posts/: 001.html
pages/: en.md  habits.md  index.md
pages/posts/: 001.md  002.md.todo
